--- a/sass/style.sass
+++ b/sass/style.sass
@@ -584,7 +584,7 @@ select::-ms-expand
 	color: #000
 	background-color: #fff
 	opacity: 0
-	animation: notify .2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both
+	animation: notify .3s cubic-bezier(0.645, 0.045, 0.355, 1) 0s 1 normal both running
 	&--error
 		color: #e05f5f
 		border-color: currentColor
