--- a/app/css/style.css
+++ b/app/css/style.css
@@ -889,8 +889,8 @@ select::-ms-expand {
   color: #000;
   background-color: #fff;
   opacity: 0;
-  -webkit-animation: notify 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: notify 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  -webkit-animation: notify 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) 0s 1 normal both running;
+  animation: notify 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) 0s 1 normal both running;
 }
 
 .c-notify--error {
