--- a/pug/contacts.pug
+++ b/pug/contacts.pug
@@ -63,8 +63,8 @@ html
 													label.b-form__label(for="name") Ваше имя
 													input(type="text", name="name", id="name").b-form__field
 												.b-form__group
-													label.b-form__label(for="phone") Ваш e-mail
-													input(type="tel", name="phone", id="phone").b-form__field
+													label.b-form__label(for="email") Ваш e-mail
+													input(type="tel", name="email", id="email").b-form__field
 												.b-form__group
 													label.b-form__label(for="msg") Комментарий
 													textarea(name="msg", id="msg", rows=3).b-form__field
